# django-strawberry-example

./: .gitignore  README.md  pyproject.toml
example/: __init__.py  asgi.py  schema.py  settings.py  urls.py
example/fruit/: apps.py  models.py  schema.py  types.py
example/fruit/migrations/: 0001_initial.py  __init__.py
